fixup rounded border covered by background

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -278,6 +278,7 @@ html, body{
 .transit-details:nth-child(odd),
 .schedule-row:nth-child(odd){
   background-color:#FFF;
+  border-radius:7px;
 }
 body{
   background-color: #F0F0FF;
